--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/grid.css">
         <link rel="stylesheet" href="./assets/css/style.css">
+
     </head>
     <body>
         <div id="root">
@@ -339,9 +341,179 @@
                     <div class="container">
                         <h2>Ratings & Reviews</h2>
                         <div class="ratings-reviews-content">
+                            <div class="ratings-one">
+                                <div class="rating-snapshot">
+                                    <h3>Rating Snapshot</h3>
+                                    <p>Select a row below to filter reviews.</p>
+                                    <div class="progress">
+                                        <div class="primary-rating">5 stars</div>
+                                        <div class="progress-bar">
+                                            <div class="progress-bar-inner">
+                                                <div class="progress-bar-bg" style="width: 66.66666666666667%;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-rating-count">2</div>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="primary-rating">4 stars</div>
+                                        <div class="progress-bar">
+                                            <div class="progress-bar-inner">
+                                                <div class="progress-bar-bg" style="width: 33.333333333333336%;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-rating-count">1</div>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="primary-rating">3 stars</div>
+                                        <div class="progress-bar">
+                                            <div class="progress-bar-inner">
+                                                <div class="progress-bar-bg" style="width: 0%;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-rating-count">0</div>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="primary-rating">2 stars</div>
+                                        <div class="progress-bar">
+                                            <div class="progress-bar-inner">
+                                                <div class="progress-bar-bg" style="width: 0%;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-rating-count">0</div>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="primary-rating">1 stars</div>
+                                        <div class="progress-bar">
+                                            <div class="progress-bar-inner">
+                                                <div class="progress-bar-bg" style="width: 0%;"></div>
+                                            </div>
+                                        </div>
+                                        <div class="primary-rating-count">0</div>
+                                    </div>
+                                </div>
+                                <div class="overall-rating">
+                                    <h3>Overall Rating</h3>
+                                </div>
+                                <div class="review-this-product">
+                                    <h3>Review this Product</h3>
+                                    <p>Adding a review will require a valid email for verification</p>
+                                </div>
+                            </div>
+
+                            <div class="average-customer-rating">
+                                <h3>Average Customer Ratings</h3>
+                                <div class="wrap-average">
+                                    <div class="wrap-average-first">
+                                        <p>Quality of Product</p>
+                                        <div class="wrap-average-rating">
+                                            <div class="wrap-average-rating-inner">
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                            </div>
+                                            <span>5.0</span>
+                                        </div>
+                                    </div>
+                                    <div class="wrap-average-second">
+                                        <p>Value of Product</p>
+                                        <div class="wrap-average-rating">
+                                            <div class="wrap-average-rating-inner">
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation grey"></div>
+                                            </div>
+                                            <span>4.0</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="double-garage">
+                                <div class="double-garage-first">
+                                    <h3>Double Garage Storage</h3>
+                                    <p class="check-circle"><i class="fa fa-check-circle"></i> <span>VERIFIED PURCHASER</span></p>
+                                    <p>Eastern Heights Ipswich QLD</p>
+                                    <p>Reviews <span>3</span></p>
+                                    <p>Votes <span>0</span></p>
+                                    <p>How would you identify yourself? <span>Beginner</span></p>
+                                </div>
+                                <div class="double-garage-second">
+                                    <h3>Double Garage Storage</h3>
+                                    <p class="small">4 months ago</p>
+                                    <p>I have a shallow peaked roof on my garage. this size with two 1800+mm uprights has allowed me to us the full width of the back wall to my maximum comfortable storage height. there are now two rack-it shelving sets with 2700+ beams and one with the 1200+mm add-on shelves. Lock your shelf beams into place with these pins.</p>
+                                    <p class="recommend"><i class="fa fa-check-circle"></i> Yes,I recommend this product.</p>
+                                    <p class="helpful">Helpful? <span><i class="fa fa-thumbs-up"></i></span> (0) <span><i class="fa fa-thumbs-down"></i></span> (0)</p>
+                                </div>
+                                <div class="double-garage-third">
+                                    <div class="wrap-average-first">
+                                        <p>Quality of Product</p>
+                                        <div class="wrap-average-rating">
+                                            <div class="wrap-average-rating-inner">
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                            </div>
+                                            <span>5.0</span>
+                                        </div>
+                                    </div>
+                                    <div class="wrap-average-second">
+                                        <p>Value of Product</p>
+                                        <div class="wrap-average-rating">
+                                            <div class="wrap-average-rating-inner">
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation"></div>
+                                                <div class="presentation grey"></div>
+                                            </div>
+                                            <span>4.0</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="double-garage double-garage-2">
+                                <div class="double-garage-first">
+                                    <h3>VinnieBlue</h3>
+                                    <p class="check-circle"><i class="fa fa-check-circle"></i> <span>VERIFIED PURCHASER</span></p>
+                                    <p>Melbourne</p>
+                                    <p>Review <span>1</span></p>
+                                    <p>Votes <span>0</span></p>
+                                    <p>How would you identify yourself? <span>Advanced DIYer</span></p>
+                                </div>
+                                <div class="double-garage-second">
+                                    <h3>Rack It is well designed and is very easy to work.</h3>
+                                    <p class="small">a year ago</p>
+                                    <p>Rack It assembles without tools and is strong. We use these for product displays.</p>
+                                    <p class="recommend"><i class="fa fa-check-circle"></i> Yes,I recommend this product.</p>
+                                    <p class="helpful">Helpful? <span><i class="fa fa-thumbs-up"></i></span> (0) <span><i class="fa fa-thumbs-down"></i></span> (0)</p>
+                                </div>                                
+                            </div>
+
+                            <div class="double-garage double-garage-3">
+                                <div class="double-garage-first">
+                                    <h3>Lain J</h3>
+                                    <p class="check-circle"><i class="fa fa-check-circle"></i> <span>VERIFIED PURCHASER</span></p>
+                                    <p>Review <span>1</span></p>
+                                    <p>Votes <span>0</span></p>
+                                </div>
+                                <div class="double-garage-second">
+                                    <h3>Rack It 1000kg</h3>
+                                    <p class="small">a year ago</p>
+                                    <p>Brilliant system and perfect for my need</p>
+                                    <p class="helpful">Helpful? <span><i class="fa fa-thumbs-up"></i></span> (0) <span><i class="fa fa-thumbs-down"></i></span> (0)</p>
+                                </div>                                
+                            </div>
                         </div>
                     </div>
                 </div>
+               
             </div>
         </div>
     </body>
