--- a/star.html
+++ b/star.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - CSS Only HTML Star Rating (No Javascript)  - Form Input Field + Showcase Element</title>
+  <title>CSS</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="./star.css">
 
@@ -38,6 +38,8 @@ https://blog.nicohood.de/pure-css-only-html-star-rating-no-javascript -->
     <li class="rating-score-item"></li>
   </ul>
   <br/>
+
+
 
 <ul class="rating-score" data-rating="3.5">
     <li class="rating-score-item"></li>
